Fixed game logic and player info alignment

--- a/client/FlosGameBoard/src/app/what-the-heck/what-the-heck.component.scss
+++ b/client/FlosGameBoard/src/app/what-the-heck/what-the-heck.component.scss
@@ -14,12 +14,15 @@
 
 .player-container {
   position: relative;
+  display: flex;
   flex-grow: 1;
+  overflow: auto;
 
   .player {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 0 15px
   }
 
   .small-avatar-wrapper {
